page overlap bug fix

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -34,7 +34,7 @@ html {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow-y: auto !important;
+  overflow-y: auto;
   overflow-x: hidden;
 }
 
@@ -129,7 +129,7 @@ input[type=datetime-local]::-webkit-calendar-picker-indicator {
   position: absolute;
   top: 64px;
   left: 0;
-  width: 100%;
+  /* width: 100%; */
   height: 100%;
   z-index: 1;
 }
